# cn_holiday_email

./: .gitignore  README.md  content_generator.py  data_fetcher.py  date.json  date_checker.py  date_fetcher.py  email_sender.py  main.py  pyproject.toml  requirements.txt  schedule_manager.py  system_prompt.md  test.py
