[tool.poetry]
name = "cn-holiday-email"
version = "0.1.0"
description = ""
authors = ["Ryan_windows <Ryan_windows@test.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.75.0"
requests = "^2.32.3"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
